# crm-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_pipeline/: audio_processor.py  config.py  face_recognition.py  note_extractor.py  video_processor.py  voice_recognition.py
apps/interactions/: admin.py  models.py  serializers.py  urls.py  views.py
apps/interactions/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/notes/: __init__.py  admin.py  models.py  serializers.py  views.py
apps/notes/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/relationships/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
apps/relationships/migrations/: 0001_initial.py  0002_initial.py
apps/signatures/: admin.py  apps.py  models.py
apps/signatures/migrations/: 0001_enable_pgvector.py  0001_initial.py
apps/users/: admin.py  models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py
celery_app/: celery_config.py  tasks.py
config/: asgi.py  settings.py  urls.py  wsgi.py
websocket/: consumers.py  middleware.py
